assets/less/lesson.less
@import "main.less";

.body {
    /* Override maximum body width for this page, to avoid lessons stretching too widely */
    max-width: 80em;
}

.lesson-header,
.lesson-header a {
    /* Text */
    color: #fff;
}

@lesson-info-height: 4.5em;

.lesson-header {
    position: relative;
    padding-bottom: 1em;

    .lesson-info:before {
        /* Position */
        position: absolute;
        left: -@lesson-info-height;
        width: @lesson-info-height;
        height: @lesson-info-height;
        /* Background */
        background: var(--course-icon);
        background-size: @lesson-info-height @lesson-info-height;
        content: "";
    }

    .lesson-info {
        /* Position */
        position: relative;
        margin-left: calc(@lesson-info-height);
        padding-left: 2em;
        min-height: @lesson-info-height;
    }

    .course-title {
        /* Text */
        font-size: 1.5em;
        font-weight: 600;
        font-family: "Varela Round";
        /* Border */
        border-bottom: solid 1px #fff;
        display: inline-block;
    }

    .lesson-title {
        /* Position */
        margin-top: 0em;
        /* Text */
        font-size: 1.2em;
        font-family: "Helvetica", "Arial", "sans-serif";

        span {
            vertical-align: -5%;
            padding: 0 1em;
        }

        a {
            font-weight: bold;
        }
    }

    .lesson-buttons {
        /* Position */
        float: right;
        margin-right: 1em;
        margin-top: -1em;

        a.button {
            /* Position */
            display: inline-block;
            /*width: 9em;*/
            width: 12em;
            text-align: center;
            margin-left: 2em;
            /* Style */
            background-color: #fff;
            border-radius: 98px;
            padding: 0.75em 1.25em;
            /* Text */
            color: var(--course-color1);
            font-family: "Varela Round";
            font-size: 1.2em;
            font-variant: small-caps;
            font-weight: bold;
        }
    }
}

.lesson-body {
    /* Style */
    line-height: 1.5em;
    background-color: #fff;
    /* Text */
    font-size: 1em;
    color: #333;

    h3 {
        margin: 0 0 0.5em 0;
        font-size: 1.55em;
    }

    h4 {
        margin: 1em 0 0.5em 0;
        font-size: 1.1em;
        font-weight: bold;
    }

    /* Tabs */
    .lesson-tab-input {
        display: none;
    }

    .lesson-tab-label {
        /* Position */
        display: inline-block;
        position: relative;
        top: calc(-3em - 50px + 5px);
        min-width: 10em;
        z-index: 1;

        /* Style */
        padding: 15px 25px;
        font-weight: 600;
        text-align: center;
        color: #eee;
        border: 1px solid transparent;
    }

    .lesson-tab-label:before {
        font-family: fontawesome;
        font-weight: normal;
        margin-right: 10px;
    }

    .lesson-tab-label[for="lesson-tab-lecture"]:before {
        content: "\f02d";
    }

    .lesson-tab-label[for="lesson-tab-vocabulary"]:before {
        /*content: "\f03a";*/
        content: "\f022";
    }

    .lesson-tab-label[for="lesson-tab-plan"]:before {
        content: "\f1cb";
    }

    .lesson-tab-label[for="lesson-tab-feedback"]:before {
        content: "\f024";
    }

    .lesson-tab-label:hover {
        color: #fff;
        cursor: pointer;
    }

    .lesson-tab-input:checked + label {
        color: #235ff8;
        background-color: #fff;
        border-radius: 2px;
    }

    .lesson-lecture,
    .lesson-plan,
    .lesson-vocabulary,
    .lesson-feedback {
        /* Position */
        display: none;
        margin-top: -3em;

        /* Style */
        font-family: "Open Sans";
        font-size: 1.2em;
        line-height: 1.4em;

        /* Lists */
        ol {
            list-style-type: decimal;
        }

        ol ol {
            list-style-type: lower-alpha;
        }
    }

    #lesson-tab-lecture:checked ~ .lesson-lecture,
    #lesson-tab-plan:checked ~ .lesson-plan,
    #lesson-tab-vocabulary:checked ~ .lesson-vocabulary,
    #lesson-tab-feedback:checked ~ .lesson-feedback {
        display: block;
    }

    .spoiler-answer {
        filter: blur(4px);
        transition-property: -webkit-filter;
        transition-duration: 0.2s;
    }

    .spoiler-answer:hover,
    .spoiler:focus {
        filter: blur(0px);
    }

    .definition-head {
        margin-left: 2em;
        font-weight: bold;
    }

    .definition-head:after {
        content: " = ";
    }

    .definition-head.transient:before {
        font-family: fontawesome;
        content: "\f515";
        padding-right: 0.4em;
        /*color: #888;*/
    }

    /*
    .definition-head.transient:hover:before {
        color: #000;
    }

    .definition-head.transient {
        position: relative;
    }

    .definition-head.transient:hover::nth-child(0):after {
        position: absolute;
        display: block;
        top: 2em;
        left: 0em;
        width: 20em;
        z-index: 5000;

        background: #fff;
        padding: 0.5em;
        border-radius: 0.4em;
        border: solid 0.08em #888;
        font-size: 0.8em;
        font-weight: normal;
        content: "No need to memorize this word. It will not be used in further lessons or exercises.";
    }
    */

    .hspace {
        margin-left: 2em;
    }

    table {
        margin-top: 1em;
        margin-bottom: 1em;
    }

    th {
        background-color: #ddd;
        text-align: center;
    }

    td, th {
        padding: 0.3em 1em;
        border: solid 1px #000;
    }

    .translation-source {
        margin-top: 0.5em;
        margin-left: 1em;
        font-weight: bold;
    }

    .translation-target {
        margin-top: 0.2em;
        margin-bottom: 0.6em;
        margin-left: 2em;
        font-style: italic;
    }
}

.exercise-holder {
    /* Border */
    border-radius: 10px 10px 10px 10px;
    background-color: #fff;
    font-size: 1em;
}

/* Mobile */
@media @phone {
    .lesson-header {
        .lesson-buttons {
            float: inherit;
            display: block;
            margin-top: 1em;
            margin-left: -3em;
        }
    }

    .lesson {
        /* Adjust font size */
        font-size: 0.85em;
        table {
            font-size: 0.9em;
        }

        p {
            padding-bottom: 0.5em;
        }
    }
}

